--- a/07company_1/index.html
+++ b/07company_1/index.html
@@ -3,15 +3,174 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.0.9/swiper-bundle.css" integrity="sha512-WDdCafHbATE4+4590Fk0qPbO6O2MfG/60dN+MM8LmB00SeBmy9VWD0UN/qlZIrmCHGrewcdffueVXuuTcDo0Wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <title>company</title>
   </head>
   <body>
+    <header id="headerWrap" class="mb-3 mb-lg-5">
+        <div class="bgcolor"></div>
+        <div class="container px-md-0">
+            <nav class="navbar navbar-expand-md navbar-dark px-md-0">
+                <a class="navbar-brand" href="#"><img src="images/logo.png" alt="" style="width:180px"></a>
+                <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavId">
+                    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">COMPANY</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">CATALOG</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">BUSINESS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">COMMUNITY</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="row">
+                <div class="col-xl-8 mb-3 mb-xl-0">
+                    <div class="video">
+                        <h2 class="txt text-white">UDACITY</h2>
+                        <video src="https://d125fmws0bore1.cloudfront.net/videos/video-bg-udacity.ogv" autoplay muted loop></video>
+                    </div>
+                </div>
+                <div class="col-xl-4">
+                    <div class="row">
+                        <div class="col-md-4 col-xl-12">
+                            <div class="card-view bg-white mb-3">
+                                <a href="#!" class="d-flex">
+                                    <img src="images/card1.png" alt="" style="width:108px">
+                                    <div class="p-3">
+                                        <h4>Lorem, ipsum.</h4>
+                                        <p>Lorem, ipsum dolor.</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-xl-12">
+                            <div class="card-view bg-white mb-3">
+                                <a href="#!" class="d-flex">
+                                    <img src="images/card2.png" alt="" style="width:108px">
+                                    <div class="p-3">
+                                        <h4>Lorem, ipsum.</h4>
+                                        <p>Lorem, ipsum dolor.</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-xl-12">
+                            <div class="card-view bg-white mb-3">
+                                <a href="#!" class="d-flex">
+                                    <img src="images/card3.png" alt="" style="width:108px">
+                                    <div class="p-3">
+                                        <h4>Lorem, ipsum.</h4>
+                                        <p>Lorem, ipsum dolor.</p>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="col-xl-4">
+                    <ul class="card-view">
+                        <li class="bg-white mb-3">
+                            <a href="#!" class="d-flex">
+                                <img src="images/card1.png" alt="" style="width:108px">
+                                <div class="p-3">
+                                    <h4>Lorem, ipsum.</h4>
+                                    <p>Lorem, ipsum dolor.</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="bg-white mb-3">
+                            <a href="#!" class="d-flex">
+                                <img src="images/card2.png" alt="" style="width:108px">
+                                <div class="p-3">
+                                    <h4>Lorem, ipsum.</h4>
+                                    <p>Lorem, ipsum dolor.</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="bg-white">
+                            <a href="#!" class="d-flex">
+                                <img src="images/card3.png" alt="" style="width:108px">
+                                <div class="p-3">
+                                    <h4>Lorem, ipsum.</h4>
+                                    <p>Lorem, ipsum dolor.</p>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div> -->
+            </div>
+        </div>
+    </header>
+    <div class="container mb-5">
+        <img src="images/logos.png" alt="" class="img-fluid">
+    </div>
+    <div class="slider">
+        <div class="container">
+            <h4 class="text-center slider-title mb-3">OUR AMAZING COMMUNITY</h4>
+            <div class="row">
+                <div class="swiper-container swiper col-md-10 offset-md-1">
+                    <div class="swiper-wrapper">
+                        <!-- 1st -->
+                        <div class="swiper-slide">
+                            <div class="text-center">
+                                <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt voluptate in provident consequatur beatae quia quidem pariatur deleniti, consectetur corporis?</h4>
+                                <p>Lorem ipsum dolor sit.</p>
+                            </div>
+                        </div>
+                        <!-- 1st -->
+                        <!-- 1st -->
+                        <div class="swiper-slide">
+                            <div class="text-center">
+                                <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt voluptate in provident consequatur beatae quia quidem pariatur deleniti, consectetur corporis?</h4>
+                                <p>Lorem ipsum dolor sit.</p>
+                            </div>
+                        </div>
+                        <!-- 1st -->
+                        <!-- 1st -->
+                        <div class="swiper-slide">
+                            <div class="text-center">
+                                <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt voluptate in provident consequatur beatae quia quidem pariatur deleniti, consectetur corporis?</h4>
+                                <p>Lorem ipsum dolor sit.</p>
+                            </div>
+                        </div>
+                        <!-- 1st -->
+                    </div>  <!-- swiper-wrapper -->
+                </div>
+                <div class="swiper-next d-none d-md-block"></div>
+                <div class="swiper-prev d-none d-md-block"></div>
+            </div>
+        </div>
+    </div>
 
-    
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.0.9/swiper-bundle.min.js" integrity="sha512-bPNHwutl0bNsjHtw+AtR2xvp0BLtpm9mN6LcqzDZifcQSYv/dPVvND245WZVst+m7GhYHX647RoaL9w6VVraxw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <script>
+        const swiper = new Swiper('.swiper', {
+            // Optional parameters
+            loop: true,
+
+            // Navigation arrows
+            navigation: {
+                nextEl: '.swiper-next',
+                prevEl: '.swiper-prev',
+            },
+        });
+    </script>
   </body>
 </html>
