--- a/07company_1/index.html
+++ b/07company_1/index.html
@@ -117,7 +117,7 @@
     <div class="container mb-5">
         <img src="images/logos.png" alt="" class="img-fluid">
     </div>
-    <div class="slider">
+    <div class="slider mb-5">
         <div class="container">
             <h4 class="text-center slider-title mb-3">OUR AMAZING COMMUNITY</h4>
             <div class="row">
@@ -151,6 +151,120 @@
                 </div>
                 <div class="swiper-next d-none d-md-block"></div>
                 <div class="swiper-prev d-none d-md-block"></div>
+            </div>
+        </div>
+    </div>
+    <div class="banner mb-5">
+        <div class="container">
+            <div class="row">
+                <!-- #1 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="images/nano1.jpg" alt="" class="img-fluid w-100">
+                            <div class="mask"></div>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Lorem, ipsum dolor.</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, maiores.</p>
+                            <a href="#!" class="btn btn-primary text-white d-block d-md-inline">MORE</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- #1 -->
+                <!-- #2 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="images/nano2.jpg" alt="" class="img-fluid w-100">
+                            <div class="mask"></div>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Lorem, ipsum dolor.</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, maiores.</p>
+                            <a href="#!" class="btn btn-primary text-white d-block d-md-inline">MORE</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- #2 -->
+                <!-- #3 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="images/nano3.jpg" alt="" class="img-fluid w-100">
+                            <div class="mask"></div>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Lorem, ipsum dolor.</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, maiores.</p>
+                            <a href="#!" class="btn btn-primary text-white d-block d-md-inline">MORE</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- #3 -->
+                <!-- #4 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="images/nano4.jpg" alt="" class="img-fluid w-100">
+                            <div class="mask"></div>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Lorem, ipsum dolor.</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, maiores.</p>
+                            <a href="#!" class="btn btn-primary text-white d-block d-md-inline">MORE</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- #4 -->
+                <!-- #5 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="images/nano5.jpg" alt="" class="img-fluid w-100">
+                            <div class="mask"></div>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Lorem, ipsum dolor.</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, maiores.</p>
+                            <a href="#!" class="btn btn-primary text-white d-block d-md-inline">MORE</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- #5 -->
+                <!-- #6 -->
+                <div class="col-md-6 col-lg-4 mb-3">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="images/nano6.jpg" alt="" class="img-fluid w-100">
+                            <div class="mask"></div>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Lorem, ipsum dolor.</h4>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, maiores.</p>
+                            <a href="#!" class="btn btn-primary text-white d-block d-md-inline">MORE</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- #6 -->
+            </div>
+        </div>
+    </div>
+    <div class="advan py-5">
+        <div class="container">
+            <h2 class="text-center mb-5">The Udacity Advantage</h2>
+            <div class="row px-5 px-md-0">
+                <div class="col-md-6 d-flex flex-column justify-contnet-center order-2 order-md-1">
+                    <div class="icon d-flex justify-contnet-center align-items-center mb-3 ml-auto mr-auto ml-md-0">
+                        <img src="images/adv-icon1.svg" alt="">
+                    </div>
+                    <h4 class="title1st text-center text-md-left">Lorem ipsum dolor sit.</h4>
+                    <p class="text-center text-md-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus consequuntur sint incidunt? Explicabo, quam ut alias perferendis nesciunt consequuntur. Consequatur!</p>
+                </div>
+                <div class="col-md-6 img-view order-1 mb-5 order-md-2">
+                    <img src="images/adv-img1.jpg" alt="" class="img-1st">
+                    <img src="images/adv-img2.jpg" alt="" class="img-2st">
+                </div>
             </div>
         </div>
     </div>
