--- a/07company_1/index.html
+++ b/07company_1/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.0.9/swiper-bundle.css" integrity="sha512-WDdCafHbATE4+4590Fk0qPbO6O2MfG/60dN+MM8LmB00SeBmy9VWD0UN/qlZIrmCHGrewcdffueVXuuTcDo0Wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <title>company</title>
@@ -251,10 +252,11 @@
         </div>
     </div>
     <div class="advan py-5">
+        <div class="bgcolor2"></div>
         <div class="container">
             <h2 class="text-center mb-5">The Udacity Advantage</h2>
             <div class="row px-5 px-md-0">
-                <div class="col-md-6 d-flex flex-column justify-contnet-center order-2 order-md-1">
+                <div class="col-md-6 d-flex flex-column justify-content-center order-2 order-md-1">
                     <div class="icon d-flex justify-contnet-center align-items-center mb-3 ml-auto mr-auto ml-md-0">
                         <img src="images/adv-icon1.svg" alt="">
                     </div>
@@ -262,12 +264,130 @@
                     <p class="text-center text-md-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus consequuntur sint incidunt? Explicabo, quam ut alias perferendis nesciunt consequuntur. Consequatur!</p>
                 </div>
                 <div class="col-md-6 img-view order-1 mb-5 order-md-2">
-                    <img src="images/adv-img1.jpg" alt="" class="img-1st">
-                    <img src="images/adv-img2.jpg" alt="" class="img-2st">
+                    <div class="img-1st"></div>
+                    <div class="img-2st"></div>
+                    <!-- <img src="images/adv-img1.jpg" alt="" class="img-1st">
+                    <img src="images/adv-img2.jpg" alt="" class="img-2st"> -->
+                </div>
+            </div>
+            <div class="row px-5 px-md-0">
+                <div class="col-md-6 d-flex flex-column justify-content-center order-2">
+                    <div class="icon d-flex justify-contnet-center align-items-center mb-3 ml-auto mr-auto ml-md-0">
+                        <img src="images/adv-icon2.svg" alt="">
+                    </div>
+                    <h4 class="title2st text-center text-md-left">Lorem ipsum dolor sit.</h4>
+                    <p class="text-center text-md-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus consequuntur sint incidunt? Explicabo, quam ut alias perferendis nesciunt consequuntur. Consequatur!</p>
+                </div>
+                <div class="col-md-6 img-view order-1 mb-5">
+                    <div class="img-3st"></div>
+                    <div class="img-4st"></div>
+                    <!-- <img src="images/adv-img1.jpg" alt="" class="img-1st">
+                    <img src="images/adv-img2.jpg" alt="" class="img-2st"> -->
+                </div>
+            </div>
+            <div class="row px-5 px-md-0">
+                <div class="col-md-6 d-flex flex-column justify-content-center order-2 order-md-1">
+                    <div class="icon d-flex justify-content-center align-items-center mb-3 ml-auto mr-auto ml-md-0">
+                        <img src="images/adv-icon3.svg" alt="">
+                    </div>
+                    <h4 class="title3st text-center text-md-left">Lorem ipsum dolor sit.</h4>
+                    <p class="text-center text-md-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus consequuntur sint incidunt? Explicabo, quam ut alias perferendis nesciunt consequuntur. Consequatur!</p>
+                </div>
+                <div class="col-md-6 img-view order-1 mb-5 order-md-2">
+                    <div class="img-5st"></div>
+                    <div class="img-6st"></div>
+                    <!-- <img src="images/adv-img1.jpg" alt="" class="img-1st">
+                    <img src="images/adv-img2.jpg" alt="" class="img-2st"> -->
                 </div>
             </div>
         </div>
     </div>
+    <div class="contact py-5 mb-5">
+        <div class="container py-5">
+            <div class="row">
+                <div class="col-md-6 offset-md-3 text-center text-white">
+                    <h2 class="mb-3">CONTACT US</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In asperiores possimus sint nostrum velit neque nulla quo omnis sunt perferendis!</p>
+                    <div class="btn btn-primary">CONTACT US NOW!!!!</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="footer pb-5">
+        <div class="container">
+            <div class="row px-3 px-md-0">
+                <div class="col-lg-3 mb-3">
+                    <a href="#!"><img src="images/udacity-logo.svg" alt=""></a>
+                </div>
+                <div class="col-6 col-lg">
+                    <h4>COMPANY</h4>
+                    <ul>
+                        <li><a href="#!">menu1</a></li>
+                        <li><a href="#!">menu2</a></li>
+                        <li><a href="#!">menu3</a></li>
+                        <li><a href="#!">menu4</a></li>
+                        <li><a href="#!">menu5</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-lg">
+                    <h4>CATALOG</h4>
+                    <ul>
+                        <li><a href="#!">menu1</a></li>
+                        <li><a href="#!">menu2</a></li>
+                        <li><a href="#!">menu3</a></li>
+                        <li><a href="#!">menu4</a></li>
+                        <li><a href="#!">menu5</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-lg">
+                    <h4>BUSINESS</h4>
+                    <ul>
+                        <li><a href="#!">menu1</a></li>
+                        <li><a href="#!">menu2</a></li>
+                        <li><a href="#!">menu3</a></li>
+                        <li><a href="#!">menu4</a></li>
+                        <li><a href="#!">menu5</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-lg">
+                    <h4>COMMUNITY</h4>
+                    <ul>
+                        <li><a href="#!">menu1</a></li>
+                        <li><a href="#!">menu2</a></li>
+                        <li><a href="#!">menu3</a></li>
+                        <li><a href="#!">menu4</a></li>
+                        <li><a href="#!">menu5</a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <div class="row pb-5">
+                <div class="col-md-6 mb-3">
+                    <ul class="nav justify-content-center justify-content-md-start">
+                        <li class="nav-item"><a href="#!">Privacy</a></li>
+                        <li class="nav-item px-3">/</li>
+                        <li class="nav-item"><a href="#!">Teams</a></li>
+                        <li class="nav-item px-3">/</li>
+                        <li class="nav-item"><a href="#!">Site-map</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-6">
+                    <ul class="nav justify-content-center justify-content-md-end">
+                        <li class="nav-item px-3"><a href="#!"><i class="fab fa-facebook-f"></i></a></li>
+                        <li class="nav-item px-3"><a href="#!"><i class="fab fa-google"></i></a></li>
+                        <li class="nav-item px-3"><a href="#!"><i class="fab fa-twitter"></i></a></li>
+                        <li class="nav-item px-3"><a href="#!"><i class="fab fa-github"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row pb-5">
+                <div class="col-md-8 offset-md-2 text-center">
+                    <p class="small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, incidunt.</p>
+                    <p class="small">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa reiciendis rem provident alias ex praesentium dolor assumenda nisi, sapiente maiores, earum aut unde aperiam quod, officiis modi eos velit adipisci.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
