--- a/07company_1/index.html
+++ b/07company_1/index.html
@@ -257,47 +257,41 @@
             <h2 class="text-center mb-5">The Udacity Advantage</h2>
             <div class="row px-5 px-md-0">
                 <div class="col-md-6 d-flex flex-column justify-content-center order-2 order-md-1">
-                    <div class="icon d-flex justify-contnet-center align-items-center mb-3 ml-auto mr-auto ml-md-0">
+                    <div class="icon d-flex justify-content-center align-items-center mb-3 ml-auto mr-auto ml-md-0 bg-white">
                         <img src="images/adv-icon1.svg" alt="">
                     </div>
                     <h4 class="title1st text-center text-md-left">Lorem ipsum dolor sit.</h4>
                     <p class="text-center text-md-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus consequuntur sint incidunt? Explicabo, quam ut alias perferendis nesciunt consequuntur. Consequatur!</p>
                 </div>
                 <div class="col-md-6 img-view order-1 mb-5 order-md-2">
-                    <div class="img-1st"></div>
-                    <div class="img-2st"></div>
-                    <!-- <img src="images/adv-img1.jpg" alt="" class="img-1st">
-                    <img src="images/adv-img2.jpg" alt="" class="img-2st"> -->
+                    <img src="images/adv-img1.jpg" alt="" class="img-1st">
+                    <img src="images/adv-img2.jpg" alt="" class="img-2st">
                 </div>
             </div>
             <div class="row px-5 px-md-0">
                 <div class="col-md-6 d-flex flex-column justify-content-center order-2">
-                    <div class="icon d-flex justify-contnet-center align-items-center mb-3 ml-auto mr-auto ml-md-0">
+                    <div class="icon d-flex justify-content-center align-items-center mb-3 ml-auto mr-auto ml-md-0 bg-white">
                         <img src="images/adv-icon2.svg" alt="">
                     </div>
                     <h4 class="title2st text-center text-md-left">Lorem ipsum dolor sit.</h4>
                     <p class="text-center text-md-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus consequuntur sint incidunt? Explicabo, quam ut alias perferendis nesciunt consequuntur. Consequatur!</p>
                 </div>
                 <div class="col-md-6 img-view order-1 mb-5">
-                    <div class="img-3st"></div>
-                    <div class="img-4st"></div>
-                    <!-- <img src="images/adv-img1.jpg" alt="" class="img-1st">
-                    <img src="images/adv-img2.jpg" alt="" class="img-2st"> -->
+                    <img src="images/adv-img3.jpg" alt="" class="img-3st">
+                    <img src="images/adv-img4.jpg" alt="" class="img-4st">
                 </div>
             </div>
             <div class="row px-5 px-md-0">
                 <div class="col-md-6 d-flex flex-column justify-content-center order-2 order-md-1">
-                    <div class="icon d-flex justify-content-center align-items-center mb-3 ml-auto mr-auto ml-md-0">
+                    <div class="icon d-flex justify-content-center align-items-center mb-3 ml-auto mr-auto ml-md-0 bg-white">
                         <img src="images/adv-icon3.svg" alt="">
                     </div>
                     <h4 class="title3st text-center text-md-left">Lorem ipsum dolor sit.</h4>
                     <p class="text-center text-md-left">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus consequuntur sint incidunt? Explicabo, quam ut alias perferendis nesciunt consequuntur. Consequatur!</p>
                 </div>
                 <div class="col-md-6 img-view order-1 mb-5 order-md-2">
-                    <div class="img-5st"></div>
-                    <div class="img-6st"></div>
-                    <!-- <img src="images/adv-img1.jpg" alt="" class="img-1st">
-                    <img src="images/adv-img2.jpg" alt="" class="img-2st"> -->
+                    <img src="images/adv-img5.jpg" alt="" class="img-5st">
+                    <img src="images/adv-img6.jpg" alt="" class="img-6st">
                 </div>
             </div>
         </div>
