--- a/07company_1/index.html
+++ b/07company_1/index.html
@@ -15,24 +15,24 @@
         <div class="bgcolor"></div>
         <div class="container px-md-0">
             <nav class="navbar navbar-expand-md navbar-dark px-md-0">
-                <a class="navbar-brand" href="#"><img src="images/logo.png" alt="" style="width:180px"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="" style="width:180px"></a>
                 <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">COMPANY</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="company.html">COMPANY</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">CATALOG</a>
+                            <a class="nav-link" href="catalog.html">CATALOG</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">BUSINESS</a>
+                            <a class="nav-link" href="business.html">BUSINESS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">COMMUNITY</a>
+                            <a class="nav-link" href="community.html">COMMUNITY</a>
                         </li>
                     </ul>
                 </div>
