--- a/08company/index.html
+++ b/08company/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" integrity="sha512-PgQMlq+nqFLV4ylk1gwUOgm6CtIIXkKwaIHp/PAIWHzig/lKZSEGKEysh0TCVbHJXCLN7WetD8TFecIky75ZfQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="css/reset.css">
@@ -254,7 +255,7 @@
             </div>
         </div>
     </div>
-    <div class="banner pb165 mb-5">
+    <div class="banner pb165">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 offset-3 py-5 banner-img">
@@ -267,7 +268,7 @@
             </div>
         </div>
     </div>
-    <div class="menu pt25">
+    <div class="menu pt25 py-5 py-lg-0">
         <div class="container">
             <h2 class="mb-2 bold">Menu</h2>
             <p class="mb-5">청년다방 활용백서</p>
@@ -309,7 +310,7 @@
         </div>
         <img src="images/store_tdec.png" alt="" class="img-fluid d-none d-lg-block">
     </div>
-    <div class="store px-3 px-md-0">
+    <div class="store px-3 px-md-0 my-5 my-lg-0">
         <div class="container py-5">
             <h2 class="text-white text-center py-4">가맹문의</h2>
             <div class="row">
@@ -340,32 +341,32 @@
         </div>
         <div class="slice02"></div>
     </div>
-    <div class="open">
-        <div class="container">
+    <div class="open px-3 px-md-0 py-5">
+        <div class="container py-0 py-lg-5">
             <div class="row">
-                <div class="col-lg-4 open-title">
+                <div class="col-md-4 open-title">
                     <h2 class="mb-2 bold py-2">Open Store</h2>
                     <p class="mb-2 py-4">
-                        더 가까운곳에서<br> 
-                        고객님이 청년다방을<br> 
-                        만나실 수 있도록<br> 
-                        항상 최선을 다하겠습니다.<br> 
+                        더 가까운곳에서<br class="d-none d-md-block"> 
+                        고객님이 청년다방을<br class="d-none d-md-block">  
+                        만나실 수 있도록<br class="d-none d-md-block">  
+                        항상 최선을 다하겠습니다.<br class="d-none d-md-block">  
                     </p>
-                    <a href="#!" class="btn btn-primary text-white px-4">찾아보기</a>
+                    <a href="#!" class="btn btn-primary text-white px-4 mb-5 mb-md-0 d-block d-md-inline">찾아보기</a>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-md-4 mb-4 mb-md-0">
                     <div class="card d-flex flex-row">
                         <div class="card-body py-5">
-                            <div class="card-title">
+                            <div class="card-title mb-5">
                                 <h4>미아사거리점</h4>
                                 <p class="py-3">서울 강북구 미아동 860-32</p>
                             </div>
                             <p class="card-txt m-0">2021.10.14 <span>open</span></p>
                         </div>
-                        <div class="open-img"><img src="images/openstore.png" alt="" class="img-fluid"></div>
+                        <div class="open-img d-md-none d-block d-lg-block"><img src="images/openstore.png" alt="" class="img-fluid"></div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-md-4">
                     <div class="card d-flex flex-row">
                         <div class="card-body py-5">
                             <div class="card-title m-0">
@@ -374,12 +375,76 @@
                             </div>
                             <p class="card-txt m-0">2021.10.17 <span>open</span></p>
                         </div>
-                        <div class="open-img"><img src="images/openstore.png" alt="" class="img-fluid"></div>
+                        <div class="open-img d-md-none d-block d-lg-block"><img src="images/openstore.png" alt="" class="img-fluid"></div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="good_store py-5 px-3 px-md-0">
+        <div class="container py-0 py-lg-5">
+            <div class="row">
+                <div class="col-lg-7 p-0 py-4 order-2 order-lg-1 mr-lg-5">
+                    <img src="images/gd-store.png" alt="" class="img-fluid">
+                </div>
+                <!-- <div class="col-lg-1 d-none d-lg-block"><div class=" gd-bar"></div></div> -->
+                <div class="col-lg-4 p-0 py-4 order-1 order-lg-2 ml-lg-3">
+                    <div class="gd-title py-4">
+                        <h4>청년다방 우수가족점</h4>
+                        <p>2021 1분기 우수가족점</p>
+                    </div>
+                    <div class="gd-copy">
+                        <span class="span1">청년다방을<br class="d-none d-lg-block">
+                        열심히 운영하시는 가족점주님들</span>의<br class="d-none d-lg-block">
+                        사기를 북돋아주기 위해 만든 행사!<br class="d-none d-lg-block"><br class="d-none d-lg-block">
+                        분기별로 청년다방 가맹점 중<br class="d-none d-lg-block">
+                        우수한 성적을 거두신 3분의 가족점주님들께<br class="d-none d-lg-block">
+                       <span class="span2">우수가족점 미니현판과 소정의 선물</span>을<br class="d-none d-lg-block">
+                        드리는 우수가족점 시상식.<br class="d-none d-lg-block">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3">
+                    <a href="#!"><img src="images/pop_inq_tit.png" alt="" class="img-fluid mb-3"></a>
+                    <p>
+                        Copyright © 청년다방.<br>All Rights Reserved.
+                    </p>
+                </div>
+                <div class="col-lg-3 news">
+                    <h4 class="mb-3">Media</h4>
+                    <ul>
+                        <li><a href="#!">어쩌다 구멍가게 사장...</a></li>
+                        <li><a href="#!">고양시, 코로나에도...</a></li>
+                        <li><a href="#!">장기표 아내 조무하...</a></li>
+                        <li><a href="#!">고양시, '좋은 일자리'...</a></li>
+                        <li><a href="#!">[Opinion] 젊은 모색 2021...</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3">
+                    <h4 class="mb-3">More</h4>
+                    <ul>
+                        <li><a href="#!">개인정보취급방침</a></li>
+                        <li><a href="#!">이메일 무단수집거부</a></li>
+                        <li><a href="#!">청년연구소</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3">
+                    <ul class="ft-sns nav">
+                        <li class="nav-item px-3"><a href="#!"><i class="fab fa-twitter"></i></a></li>
+                        <li class="nav-item px-3"><a href="#!"><i class="fab fa-facebook-f"></i></a></li>
+                        <li class="nav-item px-3"><a href="#!"><i class="fab fa-instagram"></i></a></li>
+                        <li class="nav-item px-3"><a href="#!"><i class="fab fa-youtube"></i></a></li>
+                    </ul>
+                    <a href="#!" class="btn">Family Brand</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
